--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dfinity-React-Typescript-tailwind2",
+  "name": "base-icp-project",
   "version": "0.1.0",
   "scripts": {
     "dev": "vite --host",
@@ -7,18 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@dfinity/agent": "0.10.0",
-    "@dfinity/auth-client": "0.10.0",
-    "@dfinity/authentication": "0.10.0",
-    "@dfinity/candid": "0.10.0",
-    "@dfinity/identity": "0.10.0",
-    "@dfinity/principal": "0.10.0",
+    "@dfinity/agent": "^0.10.0",
+    "@dfinity/auth-client": "^0.10.0",
+    "@dfinity/authentication": "^0.10.0",
+    "@dfinity/candid": "^0.10.0",
+    "@dfinity/identity": "^0.10.0",
+    "@dfinity/principal": "^0.10.0",
     "autoprefixer": "10.3.6",
     "postcss": "^8.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "tailwindcss": "^2.2.16"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
@@ -27,6 +26,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "buffer": "^6.0.3",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.4.3",
     "vite": "^2.5.7"
   }
